<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor"
    android:padding="16dp">
    <EditText
        android:id="@+id/facility_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:hint="Enter Facility Name"
        android:inputType="text"
        android:textColorHint="@color/buttonGrey" />

    <EditText
        android:id="@+id/facility_location_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:hint="Enter Location"
        android:inputType="text"
        android:textColorHint="@color/buttonGrey" />

</LinearLayout>