...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:id="@+id/first_name_edittext"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="27dp"
        android:backgroundTint="#000000"
        android:hint="First Name"
        android:importantForAccessibility="yes"
...
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/poppins"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="@+id/line1"
        app:layout_constraintEnd_toEndOf="@+id/line1"
        app:layout_constraintStart_toStartOf="@+id/line1"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
...
