...
<!--        android:backgroundTint="@color/buttonPurple"-->
<!--        android:text="@string/view_my_profile"-->
<!--        android:textColor="@android:color/white"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.497"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/scan_qr_button" />-->


    <View
        android:id="@+id/divider"
        android:layout_width="100dp"
        android:layout_height="1dp"
...
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@color/buttonPurple"
        android:text="@string/view_events"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_switch2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_qr_button"
        app:layout_constraintVertical_bias="0.0" />

...
