...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="Create New Event"
        android:textColor="@color/white"
        android:textSize="30sp"
...
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/purple_box"
        app:layout_constraintTop_toBottomOf="@+id/line4"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/price_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:fontFamily="@font/poppins"
        android:hint="(optional)"
        android:textSize="20sp"
...
        app:layout_constraintEnd_toEndOf="@+id/purple_box"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/price_prompt"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <EditText
        android:id="@+id/max_entrants_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="2"
        android:fontFamily="@font/poppins"
        android:hint="100"
...
        app:layout_constraintBottom_toBottomOf="@+id/purple_box"
        app:layout_constraintEnd_toEndOf="@+id/purple_box"
        app:layout_constraintStart_toEndOf="@+id/waitlist_limit_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/line6" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="8"
        android:fontFamily="@font/poppins"
        android:hint="Event Description..."
...
        app:layout_constraintEnd_toEndOf="@+id/purple_box"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/last_reg_prompt"
        app:layout_constraintTop_toBottomOf="@+id/line3" />

    <EditText
        android:id="@+id/runtime_start_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="5"
        android:focusable="false"
        android:fontFamily="@font/poppins"
...
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/purple_box"
        app:layout_constraintTop_toBottomOf="@+id/line4"
        app:layout_constraintVertical_bias="0.9" />

    <EditText
        android:id="@+id/runtime_end_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:ems="5"
        android:focusable="false"
...
        app:layout_constraintEnd_toEndOf="@+id/purple_box"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/purple_box"
        app:layout_constraintTop_toTopOf="@+id/purple_box" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:fontFamily="@font/poppins"
        android:hint="New Event"
        android:textSize="20sp"
...
        android:text="Cancel"
        android:fontFamily="@font/poppins"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purple_box"
        app:layout_constraintEnd_toStartOf="@id/generate_qr_button"/>

    <Button
        android:id="@+id/generate_qr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Generate QR"
...
